# PLS-Analysis-Software

./: README.md
PLS-Analysis-Software/: CMakeLists.txt  CMakeLists.txt.user.b788438  CMakeLists.txt.user.ec92148  Import_Wavelength.h  MSC.h  Maximum_Absolute_Scaler.h  Mean_Normalization.h  Min_Max_Normalization.h  Moving_Average_Filter.h  Resources.qrc  Savitzky_Golay_method.h  Standard_Normal_Variate.h  Standardization.h  import_data.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  notes.txt  plsregress.h  plsregresscv.h  plt_spectra.cpp  plt_spectra.h  plt_spectra.ui
PLS-Analysis-Software/Data/Created_6Classes_Purity/: togather_Calibration.txt  togather_Calibration.xlsx  togather_Validation.txt  togather_Validation.xlsx
PLS-Analysis-Software/Data/Egg_data/: Test_data_20%.xlsx  Test_data_20.txt  Wavelength.csv
PLS-Analysis-Software/Data/Purity_Test_3Classes/: Wavelength_new.txt  togather_Calibration.txt  togather_Validation.xlsx
PLS-Analysis-Software/Data/Seeds_Viability_2Classes/: Wavelength_new.xlsx  total_combined_ordered_Calibration.txt  total_combined_ordered_Calibration_K-Fold.txt  total_combined_ordered_Calibration_K-Fold.xlsx  total_combined_ordered_Validation.txt  total_combined_ordered_Validation.xlsx
PLS-Analysis-Software/Result/: Beta_Coefficient_SNV.csv  Beta_Coefficient_none.csv
PLSR/Data/: Moisture_Spectral_test_data.txt  Moisture_Spectral_test_dataCV.txt  Moisture_Spectral_test_dataCV.xlsx  Moisture_Spectral_training_data.txt  Moisture_Spectral_training_dataCV.txt  Moisture_Spectral_training_dataCV.xlsx  NEW_wavelength.csv  NEW_wavelength.xlsx
PLSR/Results/: plsr.csv  test_plsr.csv  test_plsr2.csv
PLS_DA/Data/Purity_Test_3Classes/: Wavelength_new.xlsx  togather_Calibration.xlsx  togather_Validation.txt  togather_Validation.xlsx
PLS_DA/Data/Seeds_Viability_2Classes/: total_combined_ordered_Calibration.xlsx
PLS_DA/Results/: class2.csv
